<resources>
    <string name="app_name">V-VIBE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_to_continue">LogIn To Continue</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="select_your_occupation">Select Your Occupation</string>
    <string name="select_your_interest">Select Your Interest</string>
    <string name="already_have_an_account_sign_in">already have an account?sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_of_the_organization">Name of the organization</string>
    <string name="license_no">License No.</string>
    <string name="select_type_of_organization">Select Type Of Organization</string>
    <string name="loading">Loading...</string>
    <string name="interest">Interest</string>
    <string name="apply_for_event">Apply for Event</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="add_post">Add Post</string>
    <string name="click_on_the_add_button_to_upload_post">Click On The Add Button To Upload Post</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_name">Event Name</string>
    <string name="event_details">Event Details</string>
    <string name="event_location">Event Location</string>
    <string name="create_new_post">Create New Post</string>
    <string name="upload">Upload</string>
    <string name="email">Email:</string>
    <string name="field">Field:</string>
    <string name="occupation">Occupation:</string>
    <string name="pincode">PinCode:</string>
    <string name="dob">Dob:</string>
    <string name="gender">Gender:</string>
    <string name="type">Type:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="postal_code">Postal Code</string>
    <string name="empowering_change_volunteer_for_a_better_tomorrow">Empowering change, volunteer for a better tomorrow</string>
    <string name="v_vibe">V-VIBE</string>
    <string name="select_your_account_type">Select Your Account Type</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="count">Count</string>
    <string name="organization_name">Organization Name</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="post">Post</string>
    <string name="save">Save</string>

</resources>