<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/back"
    tools:context=".activities.SignUp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/contact"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/contact"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/address"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/select_your_gender"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
      <AutoCompleteTextView
          android:id="@+id/gender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/email_username"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textPasword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textCp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/city"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textCity"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/state"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textState"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/postal_code"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textCode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/date_of_birth"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/date"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:inputType="date"
          android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/select_your_occupation"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
      <AutoCompleteTextView
          android:id="@+id/occupationText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/select_your_interest"
        android:textColorHint="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
      <AutoCompleteTextView
          android:id="@+id/interestText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:animateLayoutChanges="true">
      <com.google.android.material.button.MaterialButton
          android:id="@+id/signUp"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_50sdp"
          android:layout_marginTop="@dimen/_20sdp"
          android:text="@string/sign_up"
          android:textColor="@color/white"
          android:textSize="@dimen/_13sdp"
          android:textStyle="bold"
          app:cornerRadius="@dimen/_8sdp"/>
      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="@dimen/_25sdp"
          android:layout_height="@dimen/_25sdp"
          android:layout_gravity="center"
          android:visibility="invisible"/>
    </FrameLayout>
    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/already_have_an_account_sign_in"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

  </LinearLayout>

</ScrollView>