<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_1sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/round_account_circle_24"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/icon_color"
                android:layout_marginEnd="@dimen/_2sdp"
                app:riv_oval="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/orgName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organization_name"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/viewPost"
                android:contentDescription="@string/post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:scaleType="centerCrop"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_13sdp">
            <ImageView
                android:id="@+id/buttonLike"
                android:contentDescription="@string/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/likeb" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                android:text="@string/type"
                android:layout_marginStart="@dimen/_15sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_4sdp">
            <TextView
                android:id="@+id/likesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/likes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_details"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/eventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:scrollHorizontally="true" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>