<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/post_background"
    tools:context=".activities.CreatePostActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Create New Post"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:background="@drawable/post_design">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/create_new_post"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/addPost"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/background_image"
                        android:src="@drawable/round_add"
                        android:scaleType="centerCrop"
                        app:riv_oval="true"/>

                </FrameLayout>
                <TextView
                    android:id="@+id/textAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/click_on_the_add_button_to_upload_post"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <View
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="invisible"
                android:background="@color/icon_color"
                android:layout_marginTop="@dimen/_8sdp"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/viewPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_post"
                    android:background="@drawable/background_input"
                    android:scaleType="centerCrop"/>

            </FrameLayout>
            <View
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/icon_color"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/event_name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"/>
            <EditText
                android:id="@+id/eventDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/event_details"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"/>
            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/event_location"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"/>
            <EditText
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/event_date"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:inputType="date"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"/>
            <EditText
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/event_time"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:inputType="time"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_13ssp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonUpload"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>